feat: aggiunto /status e possibilità ad admin di entrare in partite in corso come spettatore
