# src/routes/protectedRouter.js
@@ -5,4 +5,7 @@ const controller = require('../controllers/gameController');
 router.route('/games/:id')
     .get(controller.getGame);
 
+router.route('/status')
+    .get(controller.getCurrentGame);
+
 module.exports = router;
